feat: add javaDoc and fix smth lines

--- a/app/src/main/resources/app.properties
+++ b/app/src/main/resources/app.properties
@@ -1,2 +1,6 @@
 personMap=JsonPersonsList.json
 hospitalMap=JsonHospitalsList.json
+number=13
+name=The best of the best number
+isTrue=true
+ddd=13.13
